WIP - small fixes and improvments on design